OpenshiftYaml/Using docker hub image/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: helloworldnj
  namespace: cc-uc-1-voyaging-coders
  selfLink: /api/v1/namespaces/cc-uc-1-voyaging-coders/services/helloworldnj
  uid: 88c711d6-0e1e-4da6-a555-5bfad7952304
  resourceVersion: '8541827'
  creationTimestamp: '2020-05-12T02:46:08Z'
  labels:
    app: helloworldnj
    app.kubernetes.io/component: helloworldnj
    app.kubernetes.io/instance: helloworldnj
    app.kubernetes.io/name: ''
    app.openshift.io/runtime: ''
    app.openshift.io/runtime-version: v1
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 3000
  selector:
    app: helloworldnj
    deploymentconfig: helloworldnj
  clusterIP: 172.21.237.45
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
